--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -19,8 +19,9 @@ right: 50px;
 	position: fixed;
 	width: 100%;
 	right: 0;
+	}
 }
-}
+
 .chat-header{
 	background: #4267B2;
 	padding-top: 1px;
@@ -229,11 +230,11 @@ ul ol {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
+  min-width: 280px;
   flex-wrap: wrap;
   margin-right: -15px;
   margin-left: -15px;
 }
-
 
 .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .col,
 .col-auto, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm,
@@ -248,7 +249,7 @@ ul ol {
   padding-left: 15px;
 }
 
-@media (min-width: 576px) {
+
   .col-sm {
     -ms-flex-preferred-size: 0;
     flex-basis: 0;
@@ -336,9 +337,8 @@ ul ol {
     flex: 0 0 100%;
     max-width: 100%;
   }
-}
 
-@media (min-width: 768px) {
+
   .col-md {
     -ms-flex-preferred-size: 0;
     flex-basis: 0;
@@ -426,8 +426,8 @@ ul ol {
     flex: 0 0 100%;
     max-width: 100%;
   }
-}
 
+  
 .border {
   border: 1px solid #dee2e6 !important;
 }
@@ -508,6 +508,14 @@ button.bg-primary:focus {
 	background-position: left top;
 	background-repeat: repeat;  
 	text-align: justify;
+}
+.btn-chatbot {
+	border-radius: 5px;
+	background-color:orange;
+	background-position: left top;
+	background-repeat: repeat;  
+	text-align: center;
+	color:white;
 }
 .tooltipicon{
 	position:relative;
