--- a/server/src/main/webapp/css/chatbox.css
+++ b/server/src/main/webapp/css/chatbox.css
@@ -31,7 +31,7 @@ width: 22px;
 height:25px;
 position: fixed;
 margin:0 auto;
-bottom: 285;
+bottom: 285px !important;
 right: 50px;
 z-index: 2;
 border:none;
